--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>net.coobird</groupId>
-      <artifactId>thumbnailator</artifactId>
-      <version>[0.4, 0.5)</version>
+      <groupId>org.imgscalr</groupId>
+      <artifactId>imgscalr-lib</artifactId>
+      <version>4.2</version>
     </dependency>
   </dependencies>
 
